--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,39 @@
-@tailwind base;
 @import "./codeblocks.css";
 @import "./math.css";
+
+@tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Here we specify the "spacing" between primitive mdx elements. The
+reason we do this is to allow the mdx components to be used in other places
+without large margins. */
+#post-main {
+  & > h1 {
+    @apply mb-7;
+  }
+
+  & > h2 {
+    @apply mb-6;
+  }
+
+  & > h3 {
+    @apply mb-5;
+  }
+
+  & > h4 {
+    @apply mb-4;
+  }
+
+  & > h5 {
+    @apply mb-4;
+  }
+
+  & > h6 {
+    @apply mb-4;
+  }
+
+  & > p {
+    @apply mb-4;
+  }
+}
